added footer and core section

--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ body {
     background-color: #0a2a43;
   }
   .color-indigo {
-    background-color: #6C63FF;
+    background-color: #0e0879;
   }
   .color-dark {
     background-color: #191919;
@@ -387,7 +387,7 @@ section img{
   width: 50%;
   padding-left:120px;
   padding-right:120px;
-  text-align: center;
+  text-align: right;
 }
 
 .mission-content h1{
@@ -411,7 +411,7 @@ section img{
   width: 50%;
   padding-left:120px;
   padding-right:120px;
-  text-align: center;
+  text-align: left;
 }
 
 .vision-content h1{
@@ -440,11 +440,13 @@ section img{
     min-width: 325px;
     padding-left: 0px;
     padding-right: 0px;
+    text-align: center;
   }
   .mission-content {
     min-width: 325px;
     padding-left: 0px;
     padding-right: 0px;
+    text-align: center;
   }
   .vision-content-pic{
     margin-left: 0px;
@@ -493,17 +495,17 @@ section img{
 .event-content{
   color: #fff;
   width: 50%;
-  padding-left:120px;
-  padding-right:120px;
-  text-align: center;
+  padding-left:50px;
+  padding-right:90px;
+  text-align: left;
 }
 
 .event-content-t{
   color: #fff;
   width: 50%;
   padding-left:120px;
-  padding-right:120px;
-  text-align: center;
+  padding-right:50px;
+  text-align: right;
 }
 
 .event-content h6{
@@ -600,7 +602,7 @@ button:hover a{
   .event{ display: flex; flex-flow: column; }
   .event-t{ display: flex; flex-flow: column; }
   .event-pic-t{order: 1;}
-  .event-content-t{order: 2;}
+  .event-content-t{order: 2;text-align: center;}
   .event-content-t{
     min-width: 325px;
     padding-left: 0px;
@@ -610,5 +612,157 @@ button:hover a{
     min-width: 325px;
     padding-left: 0px;
     padding-right: 0px;
+    text-align: center;
   }
 }
+
+/* Meet the people behind the scenes */
+.core-members{
+  display: flex;
+  text-align: center;
+}
+
+.perspective-text {
+  color: white;
+  font-family: Arial;
+  font-size: 58px;
+  font-weight: 900;
+  letter-spacing: -2px;
+  text-transform: uppercase;
+  /* margin-right: 5em; */
+}
+
+.perspective-line {
+  height: 50px;
+  overflow: hidden;
+  position: relative;
+}
+
+p {
+  margin: 0;
+  height: 50px;
+  line-height: 50px;
+  transition: all 0.5s ease-in-out;
+}
+
+.perspective-line:nth-child(odd) {
+  transform: skew(60deg, -30deg) scaleY(0.667);
+}
+.perspective-line:nth-child(even) {
+  transform: skew(0deg, -30deg) scaleY(1.333);
+}
+.perspective-line {
+  position: relative;
+}
+
+
+.perspective-line:hover p{
+  transform: translate(0, -50px);
+}
+.perspective-line:nth-child(1) {
+  left: 29px;
+}
+.perspective-line:nth-child(2) {
+  left: 58px;
+}
+.perspective-line:nth-child(3) {
+  left: 87px;
+}
+.perspective-line:nth-child(4) {
+  left: 116px;
+}
+.perspective-line:nth-child(5) {
+  left: 145px;
+}
+
+.perspective-text:hover p{
+  transform: translate(0, -50px);
+}
+p {
+  transition: all 0.5s ease-in-out;
+}
+
+.core-members-content h6{
+  max-width: 400px;
+  font-size: 1.4rem;
+  font-weight: 300;
+  color: #FFFFFF;
+}
+
+.cm-gap{
+  min-width: 20em;
+  min-height: 100px;
+}
+
+/* button  */
+.button {
+  border-radius: 50px;
+  background-color: #191919;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+.always-white{
+  color: #FFFFFF;
+}
+
+@media screen and (max-width: 425px) {
+  .perspective-text {
+    margin-right: 3.3em;
+    font-size: 48px;
+
+  }
+  .core-members{ display: flex; flex-flow: column; }
+  .core-members-content h6{
+    max-width: 400px;
+  }
+}
+
+ /* footer  */
+ footer{
+   background-color: #191919;
+   text-align: center;
+   color: #FFFFFF;
+ }
+
+ i {
+  /* opacity: 0; */
+  font-size: 28px; 
+  /* color: #1F1E1E; */
+  margin: 5px;
+ }
+ 
