--- a/Events/events.css
+++ b/Events/events.css
@@ -1,24 +1,19 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+
 }
 
 body {
-  font-size: 1.3rem;
+  font-size: 1rem;
   font-family: 'Poppins', sans-serif;
-  background: #191919;
 }
 
-a {
-  color: #333;
-  text-decoration: none;
-}
+
 
 .container {
   max-width: 1100px;
   margin: auto;
-  overflow: auto;
   padding: 0 2rem;
 }
 
@@ -29,11 +24,11 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  text-align: center;
+
 }
 
-.main-header h1 {
-  font-size: 40px;
+.main-header {
+  font-size: 30px;
   margin-bottom: 2rem;
   line-height: 1.2;
   color: white;
@@ -47,20 +42,21 @@ img {
 .card {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-gap: 5rem;
+  grid-gap: 0.5rem;
   background: #000;
   margin-bottom: 4rem;
   
 }
 
 .card h3 {
-  margin-bottom: 2rem;
+  margin-bottom: 0.5rem;
   color: white;
 }
 
 .card p {
   color: white;
-  font-size: large;
+  line-height: 1.5rem;
+  padding-bottom: 2rem;
 }
 .card img {
   height: 400px;
@@ -68,7 +64,11 @@ img {
 
 .card > div {
   padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
 }
+
 
 .card:nth-child(even) img {
   order: 2;
@@ -76,19 +76,18 @@ img {
 
 
 .btn {
-  display: inline-block;
   background:white;
   color: black;
-  padding: 0.8rem 1.8rem;
-  margin-top: 2rem;
-  cursor: pointer;
+  padding: 0.6rem 1.8rem;
+  width: fit-content;
+  margin-top: 6.5rem; 
 }
 
 .btn:hover {
   opacity: 0.8;
 }
 
-@media(max-width:600px) {
+@media screen and (max-width:750px) {
   .card {
     display: block;
   }
@@ -102,6 +101,7 @@ img {
 
 .card p {
   color: white;
-  font-size: medium;
+  font-size: 0.8em;
 }
+
 }
