--- a/Team/team.css
+++ b/Team/team.css
@@ -10,6 +10,14 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  flex-direction: column;
+}
+.title-execom {
+  font-size: 3em;
+  display:block;
+  letter-spacing:1.2em;
+  margin-right:-1.2em;
+  text-align:right;
 }
 .container {
   position: relative;
